<resources>
    <string name="app_name">Login 1</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="txtForgetPassword">Forget Your Password? Recovery It.</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="txtWelcome">Welcome To MyApp</string>
    <string name="log_in">Log In</string>
    <string name="login_activity">Login Activity</string>
</resources>